# streamlit

./: .all-contributorsrc  .dockerignore  .editorconfig  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICES  Pipfile  README.md  SECURITY.md  UASstreamlit  addition  axm  bokeh_chart.py  cachetest.py  cartpole.py  cfd-example.py  chatbot.py  cifar-cnn.py  config.yaml  constraints-3.10.txt  constraints-3.11.txt  constraints-3.12.txt  constraints-3.7.txt  constraints-3.8.txt  constraints-3.9.txt  debugging.py  delete.py  deneme ksa  dependabot.yml  (+38 more)
lib/: .coveragerc  .dockerignore  .ruff.toml  Dockerfile  MANIFEST.in  Pipfile  README.md  dev-requirements.txt  entrypoint.sh  install_requirements.in  install_requirements.txt  integration-requirements.txt  min-constraints-gen.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  runtime_example.py  setup.py  snowflake_snowpark_python-0.6.0-py3-none-any.whl  snowflake_test.py  snowflake_test_script.py  streamlit.whl  test-Pipfile  test-requirements-python-39-and-earlier.txt  test-requirements-with-tensorflow.txt  test-requirements.txt
lib/Pipfile.locks/: 2.7.15  README.md  anaconda2-2018.12  anaconda3-2018.12  miniconda2-4.5.12  python-2.7.15  python-2.7.16  python-3.5.6  python-3.6.1  python-3.6.6  python-3.6.8  python-3.7.1  python-3.7.3  python-3.7.4
lib/conda-recipe/: README.md  meta.yaml
lib/load_tester/: client.py
lib/streamlit/: Chart.py  Connection.py  (+144 more)
(+7582 files in other folders)
